trabajando en las funcionaliades en stock, usando signal

--- a/src/app/pages/stock/stock.html
+++ b/src/app/pages/stock/stock.html
@@ -1,1 +1,12 @@
-<p>stock works!</p>
+<h1>Stock Page</h1>
+<hr>
+
+<div class="row">
+    <div class="col">
+        <stock-add></stock-add>
+
+    </div>
+    <div class="col">
+        <!-- <stock-list></stock-list> -->
+    </div>
+</div>
