implementar modulo de stock completo con servicio y componentes

--- a/src/app/components/stock-add/stock-add.html
+++ b/src/app/components/stock-add/stock-add.html
@@ -1,26 +1,31 @@
-<h1>
-    {{stockAddTitle()}}
-</h1>
+<h3 class="mb-5">{{ stockAddTitle() }}</h3>
 
-<span>Desde el signal: {{this.name()}} </span>
+<div class="mb-5">
+  <h5>Desde el signal: {{ this.name() }}</h5>
+  <input 
+    type="text" 
+    class="form-control"
+    placeholder="Nombre"
+    [value]="this.name()"
+    (change)="this.name.set(txtName.value)"
+    (input)="this.name.set(txtName.value)"
+    #txtName>
+</div>
 
-<input 
-type="text" 
-class="form-control"
-placeholder="Nombre"
-[value]="this.name()"
-(change)="this.name.set(txtName.value)"
-#txtName
->
-<!-- <input 
-type="number" 
-class="form-control"
-placeholder="Cantidad"
->
+<div>
+  <h5>Cantidad: {{ this.quantity() }}</h5>
+  <input 
+    type="number" 
+    class="form-control"
+    placeholder="Cantidad"
+    [value]="this.quantity()"
+    (change)="this.quantity.set(+txtQuantity.value)"
+    (input)="this.quantity.set(txtQuantity.valueAsNumber)"
+    #txtQuantity>
+</div>
 
 <button 
-class="btn btn-primary mt-3"
-(click)="AddStock()"
->
-Agregar
-</button> -->
+  class="btn btn-primary mt-3"
+  (click)="addStock()">
+  Agregar
+</button>
