practica: convertir componente stock a formularios reactivos

--- a/src/app/shared/sidebar/sidebar.html
+++ b/src/app/shared/sidebar/sidebar.html
@@ -1,5 +1,6 @@
 <div class="row mx-3 py-2 align-items-center g-2">
     <a class="btn btn-warning" routerLink="/" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">Home</a>
     <a class="btn btn-warning" routerLink="/stocks" routerLinkActive="active">Stocks</a>
+    <a class="btn btn-warning" routerLink="/stock-reactive" routerLinkActive="active">Stock Reactivo</a>
     <a class="btn btn-warning" routerLink="/forms" routerLinkActive="active">Forms</a>
 </div>
