--- a/src/app/pages/stock-reactive/stock-reactive.html
+++ b/src/app/pages/stock-reactive/stock-reactive.html
@@ -1,5 +1,5 @@
 <div class="container mt-4">
-  <h2 class="mb-4">Gestión de Stock - Formulario Reactivo</h2>
+  <h2 class="mb-4">Formulario Reactivo Stock</h2>
   
   <div class="row">
     <div class="col-md-6">
