implementar modulo CRUD de usuarios

--- a/src/app/shared/sidebar/sidebar.html
+++ b/src/app/shared/sidebar/sidebar.html
@@ -3,4 +3,5 @@
     <a class="btn btn-warning" routerLink="/stocks" routerLinkActive="active">Stocks</a>
     <a class="btn btn-warning" routerLink="/stock-reactive" routerLinkActive="active">Stock Reactivo</a>
     <a class="btn btn-warning" routerLink="/forms" routerLinkActive="active">Forms</a>
+    <a class="btn btn-warning" routerLink="/users" routerLinkActive="active">Usuarios</a>
 </div>
