--- a/src/app/pages/main-layout/main-layout.component.html
+++ b/src/app/pages/main-layout/main-layout.component.html
@@ -1,6 +1,4 @@
-<div class="row bg-black text-white">
-  <p>Topbar</p>
-</div>
+<app-topbar></app-topbar>
 
 <div class="row">
   <div class="col-2 bg-black text-white" style="height: 100vh">
