--- a/src/app/pages/main-layout/main-layout.component.html
+++ b/src/app/pages/main-layout/main-layout.component.html
@@ -1,7 +1,7 @@
 <app-topbar></app-topbar>
 
 <div class="row">
-  <div class="col-2 bg-black text-white" style="height: 100vh">
+  <div class="col-2 bg-dark text-white" style="height: 100vh">
     <app-sidebar></app-sidebar>
   </div>
   <div class="col-10">
