--- a/src/app/shared/sidebar/sidebar.html
+++ b/src/app/shared/sidebar/sidebar.html
@@ -1,5 +1,5 @@
 <div class="row mx-3 py-2 align-items-center g-2">
-    <a class="btn btn-warning" routerLink="/" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">🏠 Home</a>
-    <a class="btn btn-warning" routerLink="/tasks" routerLinkActive="active">📋 Tareas</a>
-    <a class="btn btn-warning" routerLink="/users" routerLinkActive="active">👥 Usuarios</a>
+    <a class="btn btn-primary" routerLink="/" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">🏠 Home</a>
+    <a class="btn btn-primary" routerLink="/tasks" routerLinkActive="active">📋 Tareas</a>
+    <a class="btn btn-primary" routerLink="/users" routerLinkActive="active">👥 Usuarios</a>
 </div>
